2025-01-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (+indent-tabs-mode--hack-local-variables-h): Renamed
	from `+indent-tabs-mode--find-file-h'.  It should be added to
	hack-local-variables-hook now.

	* site-lisp/exwm-settings.el: Enable exwm-xim-mode by default.
	Add package exwm-firefox.

	* init.el: Add GitHub and CodeBerg to webjump-sites.

2025-01-02  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (save-interprogram-paste-before-kill): Set to t.

	* init.el (rime-input-method@exwm-xim): workaround for EXWM-XIM
	Set rime--temporarily-ignore-predicates to t to force enable rime
	even if meow is enabled
	(+custom-faces): Enlarge the height of tab-bar by adding a
	flat-button box
	(+custom-faces): Simplify header face

	* site-lisp/ctags-menu.el
	(ctags-menu--languages): Signal an error when the ctags program
	is not universal ctags
	(ctags-menu:RET): Use ctags-universal-ctags-program

	* site-lisp/ctags-core.el
	(ctags-create-tags-default-args): Remove the program name
	(ctags--create-tags-default-command): Use ctags-universal-ctags-program
	(ctags-create-tags): Use ctags-universal-ctags-program

	* init.el (get-scratch-buffer-create@lock): Explicitly call
	`(emacs-lock-mode 'all)'.

2025-01-01  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/exwm-settings.el: Add configuration for EXWM

	* init.el: Configuration for Common Lisp

2024-12-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (after-load-1!, after-load!):
	Optimize the expanded code

	* init.el: Disable doom-modeline-mode for igc branch
	(+indent-tabs-mode--find-file-h): Detect whether indent-tabs-mode
	should be enabled
	(tool-map): Bind C-t a to gptel-menu instead of gptel-send

	* straight/versions/dotemacs.el: Fix bug#75199 by updating corfu

	* site-lisp/vi-modeline.el (vi-modeline-apply): Disable messages

2024-12-30  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Fix overline color of mode-line-active
	(+dynamic-highlight--predicate): New function
